move close button next to logo, fix font family on mobile

--- a/web/themes/custom/votegov/src/sass/uswds-overrides/usa-header.scss
+++ b/web/themes/custom/votegov/src/sass/uswds-overrides/usa-header.scss
@@ -21,6 +21,10 @@
     margin-bottom: 21px;
     margin-right: 24px;
     margin-left: 24px;
+
+    &[aria-hidden="true"] {
+      display: none;
+    }
   }
 }
 
